--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "homepage": "https://github.com/angular/angular-seed",
   "license": "ISC",
   "dependencies": {
-    "angular": "~1.5.0",
+    "angular": "^1.6.4",
     "angular-route": "~1.5.0",
     "bootstrap": "^3.3.7"
   }
